test/errors/match_without_value_case.ml
let () = match () with [%effect? _] -> ()
